[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/hd_icons/refresh.png" type="Texture" id=1]
[ext_resource path="res://assets/swing_penguin.png" type="Texture" id=2]
[ext_resource path="res://penguin.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/zapsplat_leisure_game_of_life_spin_wheel_003_13452.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/join_room.tscn" type="PackedScene" id=5]
[ext_resource path="res://lobby.gd" type="Script" id=6]
[ext_resource path="res://assets/icons8-stop-96.png" type="Texture" id=7]
[ext_resource path="res://scenes/keyboard_key.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sfx/zapsplat_multimedia_cell_phone_smart_screen_button_press_click_feedback_001_60930.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/zapsplat_multimedia_button_click_bright_003_92100.mp3" type="AudioStream" id=15]

[sub_resource type="StyleBoxFlat" id=28]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 24.0
content_margin_bottom = 24.0
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )
border_color = Color( 0.945098, 0.945098, 0.945098, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 10

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/ReadexPro-VariableFont_HEXP,wght.ttf"

[sub_resource type="DynamicFont" id=13]
size = 100
outline_size = 1
outline_color = Color( 0.160784, 0.160784, 0.160784, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 100
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:extra_spacing_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:extra_spacing_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 100, -20, 0 ]
}

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.305882, 0.631373, 0.65098, 1 )
border_color = Color( 0.2068, 0.42834, 0.44, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 20

[sub_resource type="DynamicFontData" id=27]
font_path = "res://assets/ReadexPro-VariableFont_HEXP,wght.ttf"

[sub_resource type="DynamicFont" id=18]
size = 60
use_mipmaps = true
use_filter = true
font_data = SubResource( 27 )

[sub_resource type="DynamicFont" id=19]
size = 60
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=20]
size = 300
use_mipmaps = true
use_filter = true
extra_spacing_top = -200
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="Gradient" id=24]
colors = PoolColorArray( 1, 1, 1, 0.6, 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.305882, 0.631373, 0.65098, 1 )
border_color = Color( 0.207843, 0.427451, 0.439216, 1 )
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )
border_color = Color( 0.2068, 0.42834, 0.44, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.85098, 0.392157, 0.392157, 1 )
border_color = Color( 0.2068, 0.42834, 0.44, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 20

[node name="lobby" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="audio" type="Node" parent="."]

[node name="button_push" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 15 )

[node name="refresh" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 4 )

[node name="keyboard_hit" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 9 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="background" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="vbc" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
custom_constants/separation = 48

[node name="title" type="Panel" parent="UI/vbc"]
margin_right = 1032.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
mouse_filter = 1
custom_styles/panel = SubResource( 28 )

[node name="text" type="Label" parent="UI/vbc/title"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 13 )
text = "scatterbrain."
align = 1
valign = 1

[node name="animated_title" type="HBoxContainer" parent="UI/vbc/title"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="letter" type="Label" parent="UI/vbc/title/animated_title"]
margin_left = 492.0
margin_top = 7.0
margin_right = 540.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 14 )
text = "s"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="UI/vbc/title/animated_title/letter"]
anims/RESET = SubResource( 15 )
anims/intro = SubResource( 16 )

[node name="scroll_view" type="ScrollContainer" parent="UI/vbc"]
margin_top = 188.0
margin_right = 1032.0
margin_bottom = 1324.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="vbc" type="VBoxContainer" parent="UI/vbc/scroll_view"]
margin_right = 1020.0
margin_bottom = 1220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="create" type="Panel" parent="UI/vbc/scroll_view/vbc"]
margin_left = 110.0
margin_right = 910.0
margin_bottom = 200.0
rect_min_size = Vector2( 800, 200 )
mouse_filter = 1
size_flags_horizontal = 4
custom_styles/panel = SubResource( 17 )

[node name="text" type="Label" parent="UI/vbc/scroll_view/vbc/create"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 18 )
text = "CREATE ROOM"
align = 1
valign = 1

[node name="create_room" type="Button" parent="UI/vbc/scroll_view/vbc/create"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="available" type="Label" parent="UI/vbc/scroll_view/vbc"]
margin_top = 224.0
margin_right = 1020.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 19 )
text = "AVAILABLE ROOMS:"
align = 1
valign = 1

[node name="none" type="Label" parent="UI/vbc/scroll_view/vbc"]
visible = false
margin_top = 348.0
margin_right = 1032.0
margin_bottom = 523.0
custom_fonts/font = SubResource( 20 )
text = "..."
align = 1
valign = 1

[node name="room_list" type="VBoxContainer" parent="UI/vbc/scroll_view/vbc"]
margin_top = 348.0
margin_right = 1020.0
margin_bottom = 1220.0
custom_constants/separation = 24

[node name="join_room" parent="UI/vbc/scroll_view/vbc/room_list" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 0.0
margin_right = 910.0
margin_bottom = 200.0

[node name="join_room2" parent="UI/vbc/scroll_view/vbc/room_list" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 224.0
margin_right = 910.0
margin_bottom = 424.0

[node name="join_room3" parent="UI/vbc/scroll_view/vbc/room_list" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 448.0
margin_right = 910.0
margin_bottom = 648.0

[node name="join_room4" parent="UI/vbc/scroll_view/vbc/room_list" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 672.0
margin_right = 910.0
margin_bottom = 872.0

[node name="refresh" type="Panel" parent="UI/vbc"]
margin_top = 1372.0
margin_right = 1032.0
margin_bottom = 1872.0
rect_min_size = Vector2( 0, 500 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 23 )

[node name="CenterContainer" type="CenterContainer" parent="UI/vbc/refresh"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Control" type="Control" parent="UI/vbc/refresh/CenterContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 100.0

[node name="penguin" type="Sprite" parent="UI/vbc/refresh/CenterContainer/Control"]
z_as_relative = false
texture = ExtResource( 2 )
offset = Vector2( -8, 200 )
script = ExtResource( 3 )

[node name="swing_tween" type="Tween" parent="UI/vbc/refresh/CenterContainer/Control/penguin"]

[node name="swing_particles" type="CPUParticles2D" parent="UI/vbc/refresh/CenterContainer/Control/penguin"]
show_behind_parent = true
position = Vector2( 0, 280 )
z_as_relative = false
emitting = false
amount = 10
lifetime = 0.4
local_coords = false
texture = ExtResource( 7 )
gravity = Vector2( 0, 0 )
scale_amount = 0.4
color_ramp = SubResource( 24 )

[node name="Panel" type="Panel" parent="UI/vbc/refresh"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
custom_styles/panel = SubResource( 22 )

[node name="Control" type="Control" parent="UI/vbc/refresh/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="icon" type="Sprite" parent="UI/vbc/refresh/Panel/Control"]
scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 1 )

[node name="refresh_rooms" type="Button" parent="UI/vbc/refresh/Panel"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="haze" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="create_room" type="CanvasLayer" parent="."]
offset = Vector2( 0, 2000 )
transform = Transform2D( 1, 0, 0, 1, 0, 2000 )

[node name="background" type="ColorRect" parent="create_room"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="vbc" type="VBoxContainer" parent="create_room"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 24
alignment = 1

[node name="margin" type="MarginContainer" parent="create_room/vbc"]
margin_right = 1080.0
margin_bottom = 277.0
size_flags_vertical = 3

[node name="desc" type="Label" parent="create_room/vbc"]
margin_top = 301.0
margin_right = 1080.0
margin_bottom = 401.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 19 )
text = "ENTER YOUR NAME:"
align = 1
valign = 1

[node name="name_field" type="Panel" parent="create_room/vbc"]
margin_left = 140.0
margin_top = 425.0
margin_right = 940.0
margin_bottom = 565.0
rect_min_size = Vector2( 800, 140 )
mouse_filter = 1
size_flags_horizontal = 4
custom_styles/panel = SubResource( 26 )

[node name="text" type="Label" parent="create_room/vbc/name_field"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 18 )
align = 1
valign = 1

[node name="margin2" type="MarginContainer" parent="create_room/vbc"]
margin_top = 589.0
margin_right = 1080.0
margin_bottom = 616.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="play" type="Panel" parent="create_room/vbc"]
margin_left = 140.0
margin_top = 640.0
margin_right = 940.0
margin_bottom = 840.0
rect_min_size = Vector2( 800, 200 )
mouse_filter = 1
size_flags_horizontal = 4
custom_styles/panel = SubResource( 17 )

[node name="text" type="Label" parent="create_room/vbc/play"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 18 )
text = "PLAY"
align = 1
valign = 1

[node name="begin_game" type="Button" parent="create_room/vbc/play"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="cancel" type="Panel" parent="create_room/vbc"]
margin_left = 140.0
margin_top = 864.0
margin_right = 940.0
margin_bottom = 1064.0
rect_min_size = Vector2( 800, 200 )
mouse_filter = 1
size_flags_horizontal = 4
custom_styles/panel = SubResource( 25 )

[node name="text" type="Label" parent="create_room/vbc/cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 18 )
text = "CANCEL"
align = 1
valign = 1

[node name="cancel_create" type="Button" parent="create_room/vbc/cancel"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="margin3" type="MarginContainer" parent="create_room/vbc"]
margin_top = 1088.0
margin_right = 1080.0
margin_bottom = 1920.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="keyboard" type="VBoxContainer" parent="create_room"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
mouse_filter = 2
custom_constants/separation = 12
alignment = 2

[node name="row_1" type="HBoxContainer" parent="create_room/keyboard"]
margin_top = 1276.0
margin_right = 1032.0
margin_bottom = 1416.0
custom_constants/separation = 12
alignment = 1

[node name="key" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_right = 92.0
margin_bottom = 140.0

[node name="key2" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 104.0
margin_right = 196.0
margin_bottom = 140.0
letter = "W"

[node name="key3" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 208.0
margin_right = 301.0
margin_bottom = 140.0

[node name="key4" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 313.0
margin_right = 405.0
margin_bottom = 140.0

[node name="key5" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 417.0
margin_right = 510.0
margin_bottom = 140.0

[node name="key6" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 522.0
margin_right = 614.0
margin_bottom = 140.0

[node name="key7" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 626.0
margin_right = 718.0
margin_bottom = 140.0

[node name="key8" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 730.0
margin_right = 823.0
margin_bottom = 140.0

[node name="key9" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 835.0
margin_right = 927.0
margin_bottom = 140.0

[node name="key10" parent="create_room/keyboard/row_1" instance=ExtResource( 8 )]
margin_left = 939.0
margin_right = 1032.0
margin_bottom = 140.0

[node name="row_2" type="HBoxContainer" parent="create_room/keyboard"]
margin_top = 1428.0
margin_right = 1032.0
margin_bottom = 1568.0
custom_constants/separation = 12
alignment = 1

[node name="margin" type="MarginContainer" parent="create_room/keyboard/row_2"]
margin_right = 37.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="key" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 49.0
margin_right = 142.0
margin_bottom = 140.0

[node name="key2" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 154.0
margin_right = 247.0
margin_bottom = 140.0
letter = "W"

[node name="key3" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 259.0
margin_right = 352.0
margin_bottom = 140.0

[node name="key4" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 364.0
margin_right = 457.0
margin_bottom = 140.0

[node name="key5" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 469.0
margin_right = 562.0
margin_bottom = 140.0

[node name="key6" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 574.0
margin_right = 667.0
margin_bottom = 140.0

[node name="key7" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 679.0
margin_right = 772.0
margin_bottom = 140.0

[node name="key8" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 784.0
margin_right = 877.0
margin_bottom = 140.0

[node name="key9" parent="create_room/keyboard/row_2" instance=ExtResource( 8 )]
margin_left = 889.0
margin_right = 982.0
margin_bottom = 140.0

[node name="margin2" type="MarginContainer" parent="create_room/keyboard/row_2"]
margin_left = 994.0
margin_right = 1032.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="row_3" type="HBoxContainer" parent="create_room/keyboard"]
margin_top = 1580.0
margin_right = 1032.0
margin_bottom = 1720.0
custom_constants/separation = 12
alignment = 1

[node name="margin" type="MarginContainer" parent="create_room/keyboard/row_3"]
margin_right = 143.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.54

[node name="key" parent="create_room/keyboard/row_3" instance=ExtResource( 8 )]
margin_left = 155.0
margin_right = 247.0
margin_bottom = 140.0

[node name="key2" parent="create_room/keyboard/row_3" instance=ExtResource( 8 )]
margin_left = 259.0
margin_right = 352.0
margin_bottom = 140.0
letter = "W"

[node name="key3" parent="create_room/keyboard/row_3" instance=ExtResource( 8 )]
margin_left = 364.0
margin_right = 457.0
margin_bottom = 140.0

[node name="key4" parent="create_room/keyboard/row_3" instance=ExtResource( 8 )]
margin_left = 469.0
margin_right = 562.0
margin_bottom = 140.0

[node name="key5" parent="create_room/keyboard/row_3" instance=ExtResource( 8 )]
margin_left = 574.0
margin_right = 667.0
margin_bottom = 140.0

[node name="key6" parent="create_room/keyboard/row_3" instance=ExtResource( 8 )]
margin_left = 679.0
margin_right = 772.0
margin_bottom = 140.0

[node name="key7" parent="create_room/keyboard/row_3" instance=ExtResource( 8 )]
margin_left = 784.0
margin_right = 877.0
margin_bottom = 140.0

[node name="margin2" type="MarginContainer" parent="create_room/keyboard/row_3"]
margin_left = 889.0
margin_right = 1032.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.54

[node name="row_4" type="HBoxContainer" parent="create_room/keyboard"]
margin_top = 1732.0
margin_right = 1032.0
margin_bottom = 1872.0
custom_constants/separation = 12
alignment = 1

[node name="margin" type="MarginContainer" parent="create_room/keyboard/row_4"]
margin_right = 142.0
margin_bottom = 140.0
size_flags_horizontal = 3

[node name="space_key" parent="create_room/keyboard/row_4" instance=ExtResource( 8 )]
margin_left = 154.0
margin_right = 723.0
margin_bottom = 140.0
size_flags_stretch_ratio = 4.0
letter = " "

[node name="delete_key" parent="create_room/keyboard/row_4" instance=ExtResource( 8 )]
margin_left = 735.0
margin_right = 877.0
margin_bottom = 140.0
letter = ""
is_delete_key = true

[node name="margin2" type="MarginContainer" parent="create_room/keyboard/row_4"]
margin_left = 889.0
margin_right = 1032.0
margin_bottom = 140.0
size_flags_horizontal = 3

[node name="transition_tween" type="Tween" parent="."]

[connection signal="button_down" from="UI/vbc/scroll_view/vbc/create/create_room" to="." method="_on_create_room_button_down"]
[connection signal="button_up" from="UI/vbc/scroll_view/vbc/create/create_room" to="." method="_on_create_room_button_up"]
[connection signal="pressed" from="UI/vbc/scroll_view/vbc/create/create_room" to="." method="_on_create_room_pressed"]
[connection signal="tween_all_completed" from="UI/vbc/refresh/CenterContainer/Control/penguin/swing_tween" to="UI/vbc/refresh/CenterContainer/Control/penguin" method="_on_swing_tween_tween_all_completed"]
[connection signal="button_down" from="UI/vbc/refresh/Panel/refresh_rooms" to="." method="_on_refresh_rooms_button_down"]
[connection signal="button_up" from="UI/vbc/refresh/Panel/refresh_rooms" to="." method="_on_refresh_rooms_button_up"]
[connection signal="pressed" from="UI/vbc/refresh/Panel/refresh_rooms" to="." method="_on_refresh_rooms_pressed"]
[connection signal="button_down" from="create_room/vbc/play/begin_game" to="." method="_on_begin_game_button_down"]
[connection signal="button_up" from="create_room/vbc/play/begin_game" to="." method="_on_begin_game_button_up"]
[connection signal="pressed" from="create_room/vbc/play/begin_game" to="." method="_on_begin_game_pressed"]
[connection signal="button_down" from="create_room/vbc/cancel/cancel_create" to="." method="_on_cancel_create_button_down"]
[connection signal="button_up" from="create_room/vbc/cancel/cancel_create" to="." method="_on_cancel_create_button_up"]
[connection signal="pressed" from="create_room/vbc/cancel/cancel_create" to="." method="_on_cancel_create_pressed"]
